--- a/style/calculator-styling.css
+++ b/style/calculator-styling.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&display=swap');
 *{
-    background: rgb(255, 192, 203);
+    background: black;
 }
 #inputBox{
     background-color: white;
@@ -32,7 +32,7 @@ tr{
 td{
     width: 25vw;
    border-radius: 25px;
-   border: 1px solid pink;
+   border: 1px solid ;
 }
 .digiBtn{
     background-color: bisque;
